--- a/Appilcation1/package.json
+++ b/Appilcation1/package.json
@@ -9,7 +9,11 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.1",
-    "react-native-router-flux": "4.0.6"
+    "react-native-flip-card": "3.5.4",
+    "react-native-flip-card-view": "0.0.6",
+    "react-native-linear-gradient": "2.5.4",
+    "react-native-router-flux": "4.0.6",
+    "react-navigation-fluid-transitions": "0.3.1"
   },
   "devDependencies": {
     "@babel/core": "7.4.0",
